<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/bankerTextView"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/bankerCard" />

    <TextView
        android:id="@+id/playerTextView"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/bankerTextView"
        android:layout_alignEnd="@+id/bankerTextView"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="35dp"
        android:text="@string/playerCard" />

    <Button
        android:id="@+id/dealButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/showButton"
        android:layout_alignBottom="@+id/showButton"
        android:layout_alignParentStart="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="-1dp"
        android:text="@string/dealCard" />

    <Button
        android:id="@+id/showButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="90dp"
        android:text="@string/showCard"
        tools:ignore="RelativeOverlap" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="345dp"
        android:layout_height="48dp"
        android:layout_below="@+id/bankerTextView"
        android:layout_alignStart="@+id/bankerTextView"
        android:layout_alignEnd="@+id/bankerTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="1dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="-1dp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/rematchButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/showButton"
        android:layout_alignEnd="@+id/showButton"
        android:layout_centerVertical="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:text="@string/rematch"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/recordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/bankerTextView"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="18dp"
        android:text="@string/recordInitText" />
</RelativeLayout>